# ssh-manage

./: .gitignore  AGENTS.md  README.md  index.html  install.sh  package-lock.json  package.json
scripts/: tauri.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons-v2/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-ui/: main.js  styles.css
test/: ssh-manage.test.js
