[package]
name = "ssh-manage-desktop"
version = "0.2.0"
description = "A clay-style desktop app for managing SSH command snippets."
authors = ["ssh-manage"]
edition = "2021"

[[bin]]
name = "ssh-manage"
path = "src/main.rs"

[lib]
name = "ssh_manage_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = ["tray-icon"] }
